update in developer a branch

--- a/app.ipynb
+++ b/app.ipynb
@@ -12,8 +12,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "15e03118",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "update in the developer a branch\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"update in the developer a branch\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca6d4301",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -26,7 +44,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.4"
   }
  },
