update in developer b branch

--- a/app.ipynb
+++ b/app.ipynb
@@ -12,8 +12,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "15e03118",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The update is done in the develpoer b branch\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The update is done in the develpoer b branch\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef479787",
    "metadata": {},
    "outputs": [],
    "source": []
