update  is done on the main branch

--- a/app.ipynb
+++ b/app.ipynb
@@ -12,8 +12,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "15e03118",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The update is on the main branch \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The update is on the main branch \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43739b8c",
    "metadata": {},
    "outputs": [],
    "source": []
